2007-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/ActionMenuBar.cs, libstetic/editor/ActionMenu.cs:
	  When a menu bar loses the focus, reset the menu item selection
	  before hiding the submenus. Fixes bug #81761.

2007-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/StockIconSelectorItem.cs,
	  libstetic/editor/IconSelectorItem.cs: Added IntPtr constructors. It
	  seems to crash without them in some contexts.

2007-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs: When saving write to a temporary file
	  first, just in case something fails.

2007-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilSignalDescriptor.cs,
	  libsteticui/CecilWidgetLibrary.cs: Properly handle generic event
	  handler types. Fixes bug #80783.

2007-05-19  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs, libsteticui/WidgetEditSession.cs,
	  libsteticui/WidgetDesigner.cs, libsteticui/Project.cs,
	  libstetic/IProject.cs: Added ImagesRootPath, which is the root path
	  where to start looking for images. Added the ImportFileCallback
	  callback, called when an image file is referenced from the stetic
	  project.
	* libstetic/ImageInfo.cs: Image files are now relative to
	  ImagesRootPath.
	* libstetic/stetic.glade, libstetic/editor/SelectImageDialog.cs: Use
	  the new root image path to create relative paths to images.
	* libstetic/editor/ImageSelector.cs: Make the clean button smaller.
	* libstetic/WidgetUtils.cs: Added AbsoluteToRelative function.

2007-05-17  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Notebook.cs, libstetic/wrapper/objects.xml: Added
	  CurrentPage property to Notebook.

2007-05-17  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilSignalDescriptor.cs: Added missing null check.
	* libsteticui/ProjectBackend.cs: Remove debug cwl.
	* libstetic/wrapper/Container.cs: Don't show the main window if the